completed operator analysis

--- a/PRI.ReleaseAttributes.Analyzer/PRI.ReleaseAttributes.Analyzer.Test/PRI.ReleaseAttributes.Analyzer.Test.csproj
+++ b/PRI.ReleaseAttributes.Analyzer/PRI.ReleaseAttributes.Analyzer.Test/PRI.ReleaseAttributes.Analyzer.Test.csproj
@@ -104,6 +104,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TT.cs" />
     <Compile Include="UtilityTests.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
