--- a/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.nuspec
+++ b/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.nuspec
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>PRI.ReleaseAttributes.Analyzer</id>
-    <version>1.0.0.0</version>
-    <title>PRI.ReleaseAttributes.Analyzer</title>
-    <authors>pritchie</authors>
-    <owners>pritchie</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>PRI.ReleaseAttributes.Analyzer</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright</copyright>
-    <tags>PRI.ReleaseAttributes.Analyzer, analyzers</tags>
+		<id>PRI.PrereleaseAttributes</id>
+		<version>$version$</version>
+		<title>Prerelease attributes</title>
+		<authors>Peter Ritchie</authors>
+		<owners>Peter Ritchie</owners>
+		<licenseUrl>https://raw.githubusercontent.com/peteraritchie/PrereleaseAttributes/master/LICENSE</licenseUrl>
+		<projectUrl>https://github.com/peteraritchie/PrereleaseAttributes</projectUrl>
+		<iconUrl>https://github.com/peteraritchie/PrereleaseAttributes/raw/dev/caution.png</iconUrl>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Proposed prerelease attributes to signify members/types that are prerelease</description>
+    <releaseNotes>Addition of an analyzer</releaseNotes>
+    <copyright>Copyright 2017 Peter Ritchie</copyright>
+    <tags>Prerelease Attributes Experimental Preview</tags>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="" />
     </frameworkAssemblies>
