--- a/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Test/PRI.PrereleaseAttributes.Analyzer.Test.csproj
+++ b/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Test/PRI.PrereleaseAttributes.Analyzer.Test.csproj
@@ -130,4 +130,7 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>DONE with Test build.</PostBuildEvent>
+  </PropertyGroup>
 </Project>
