--- a/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.csproj
+++ b/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>Always</RunPostBuildEvent>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DeclarationSyntaxWrapper.cs" />
@@ -140,6 +140,6 @@
     </Exec>
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>dir .</PostBuildEvent>
+    <PostBuildEvent>DONE with Analyzer build.</PostBuildEvent>
   </PropertyGroup>
 </Project>
