--- a/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Vsix/PRI.PrereleaseAttributes.Analyzer.Vsix.csproj
+++ b/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Vsix/PRI.PrereleaseAttributes.Analyzer.Vsix.csproj
@@ -62,6 +62,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <PropertyGroup>
-    <PostBuildEvent>DONE with VSIX build.</PostBuildEvent>
+    <PostBuildEvent>Echo DONE with VSIX build.</PostBuildEvent>
   </PropertyGroup>
 </Project>
