--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -73,7 +73,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>Echo DONE with Tests build.</PostBuildEvent>
+    <PostBuildEvent>Echo DONE with $(ProjectName) build.</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>Echo START with $(ProjectName) build</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
