--- a/PRI.PrereleaseAttributes/PRI.PrereleaseAttributes.csproj
+++ b/PRI.PrereleaseAttributes/PRI.PrereleaseAttributes.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>Echo DONE with Attributes build.</PostBuildEvent>
+    <PostBuildEvent>Echo DONE with $(ProjectName) build.</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>Echo START with $(ProjectName) build</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
