cleanup and working appveyor.yml file

--- a/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Test/PRI.PrereleaseAttributes.Analyzer.Test.csproj
+++ b/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Test/PRI.PrereleaseAttributes.Analyzer.Test.csproj
@@ -131,9 +131,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>Echo DONE with $(ProjectName) build.</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>Echo START with $(ProjectName) build</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
