--- a/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Vsix/PRI.PrereleaseAttributes.Analyzer.Vsix.csproj
+++ b/PRI.PrereleaseAttributes.Analyzer/PRI.PrereleaseAttributes.Analyzer.Vsix/PRI.PrereleaseAttributes.Analyzer.Vsix.csproj
@@ -62,9 +62,11 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <PropertyGroup>
-    <PostBuildEvent>Echo DONE with $(ProjectName) build.</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>Echo START with $(ProjectName) build</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
